force-app/main/default/objects/Survey__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <inlineHelpText>Survey Question: If you have additional comments for us, please write them here.</inlineHelpText>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>