force-app/main/default/objects/Survey__c/fields/Additional_work_or_services_planned__c.field-meta.xml
<CustomField>
    <fullName>Additional_work_or_services_planned__c</fullName>
    <inlineHelpText>Survey Question: Do you have additional work or services planned with Citron Hygiene for the future?</inlineHelpText>
    <label>Additional work or services planned?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure Yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>