force-app/main/default/objects/Survey__c/fields/Bill_Clarity_Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Bill_Clarity_Satisfaction_Rating__c</fullName>
    <description>&apos;Overall, how satisfied are you with the clarity of your bill?&apos; question from NPS survey where rating starts from 0 (not at all satisfied) to 10 (extremely satisfied).</description>
    <inlineHelpText>&apos;Overall, how satisfied are you with the clarity of your bill?&apos; question from NPS survey where rating starts from 0 (not at all satisfied) to 10 (extremely satisfied).</inlineHelpText>
    <label>Bill Clarity Satisfation Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>