force-app/main/default/objects/Survey__c/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <formula>TEXT(Account__r.Customer_Tiers__c)</formula>
    <inlineHelpText>Associated Account&apos;s Customer Tier.</inlineHelpText>
    <label>Customer Tier</label>
    <type>Text</type>
</CustomField>