force-app/main/default/objects/Survey__c/fields/Did_you_receive_a_24_hour_notification__c.field-meta.xml
<CustomField>
    <fullName>Did_you_receive_a_24_hour_notification__c</fullName>
    <inlineHelpText>Survey Question: Did you receive a 24-hour notification letter or call informing you of your installation date?</inlineHelpText>
    <label>Did you receive a 24-hour notification?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>