force-app/main/default/objects/Survey__c/fields/How_likely_are_you_to_recommend_Citron__c.field-meta.xml
<CustomField>
    <fullName>How_likely_are_you_to_recommend_Citron__c</fullName>
    <inlineHelpText>Survey Question: How likely are you to recommend our company? 1-10.</inlineHelpText>
    <label>How likely are you to recommend Citron?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>