force-app/main/default/objects/Survey__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>TEXT(Account__r.Industry)</formula>
    <inlineHelpText>Associated Account&apos;s Industry.</inlineHelpText>
    <label>Industry</label>
    <type>Text</type>
</CustomField>