force-app/main/default/objects/Survey__c/fields/Likelihood_to_Add_Product_Increase_Freq__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_Add_Product_Increase_Freq__c</fullName>
    <description>&quot;How likely are you to add another product to your Citron service or increase the frequency of the visits?&apos; question from NPS survey where rating starts from 0 (not at all likely) to 10 (extremely likely).</description>
    <inlineHelpText>&quot;How likely are you to add another product to your Citron service or increase the frequency of the visits?&apos; question from NPS survey where rating starts from 0 (not at all likely) to 10 (extremely likely).</inlineHelpText>
    <label>Likelihood to Add Product Increase Freq.</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>