force-app/main/default/objects/Survey__c/fields/Recommendation_Scoring_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Scoring_Reason__c</fullName>
    <description>&quot;What is the most important reason for your score?&quot; question from NPS survey.  An explanation to to the &quot;How likely are you to recommend Citron to a friend or colleague?&quot; question from the NPS survey.</description>
    <inlineHelpText>&quot;What is the most important reason for your score?&quot; question from NPS survey.  An explanation to to the &quot;How likely are you to recommend Citron to a friend or colleague?&quot; question from the NPS survey.</inlineHelpText>
    <label>Recommendation Scoring Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>