force-app/main/default/objects/Survey__c/fields/Satisfied_with_actions_to_complete_rest__c.field-meta.xml
<CustomField>
    <fullName>Satisfied_with_actions_to_complete_rest__c</fullName>
    <label>Satisfied with actions to complete rest?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>