force-app/main/default/objects/Survey__c/fields/Satisfied_with_the_way_we_left_facility__c.field-meta.xml
<CustomField>
    <fullName>Satisfied_with_the_way_we_left_facility__c</fullName>
    <inlineHelpText>Survey Question: How satisfied are you with the way we left your facility? 1-5.</inlineHelpText>
    <label>Satisfied with the way we left facility?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>