force-app/main/default/objects/Survey__c/fields/Service_Provider_Selection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Selection_Reason__c</fullName>
    <description>Why did you choose Citron as your service provider? question from NPS survey.</description>
    <label>Service Provider Selection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reputation</fullName>
            </value>
            <value>
                <fullName>Reliability + Accountability</fullName>
            </value>
            <value>
                <fullName>Facility (Asset) Protection</fullName>
            </value>
            <value>
                <fullName>Health + Wellness</fullName>
            </value>
            <value>
                <fullName>Price Point</fullName>
            </value>
            <value>
                <fullName>Friendly Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>