force-app/main/default/objects/Survey__c/fields/Service_Provider_Selection_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Selection_Reason_Other__c</fullName>
    <description>Why did you choose Citron as your service provider? &apos;Other&apos; question from NPS survey.</description>
    <inlineHelpText>Why did you choose Citron as your service provider? &apos;Other&apos; question from NPS survey.</inlineHelpText>
    <label>Service Provider Selection Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>