force-app/main/default/objects/Survey__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <formula>Account__r.Service_Territory__r.Name</formula>
    <inlineHelpText>Associated Account&apos;s Service Territory.</inlineHelpText>
    <label>Service Territory</label>
    <type>Text</type>
</CustomField>