force-app/main/default/objects/Survey__c/fields/Service_Type_Disposal_Onsite__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Disposal_Onsite__c</fullName>
    <formula>IF(INCLUDES(Account__r.Service_Types__c ,&quot;Disposal Onsite&quot;),True,False)</formula>
    <inlineHelpText>Associated Account includes Disposal Onsite as a Service Type.</inlineHelpText>
    <label>Service Type: Disposal Onsite</label>
    <type>Checkbox</type>
</CustomField>