force-app/main/default/objects/Survey__c/fields/Service_Type_EcoFresh__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_EcoFresh__c</fullName>
    <formula>IF(INCLUDES(Account__r.Service_Types__c ,&quot;EcoFresh&quot;),True,False)</formula>
    <inlineHelpText>Associated Account includes EcoFresh as a Service Type.</inlineHelpText>
    <label>Service Type: EcoFresh</label>
    <type>Checkbox</type>
</CustomField>