force-app/main/default/objects/Survey__c/fields/Service_Type_FreshAire__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_FreshAire__c</fullName>
    <formula>IF(INCLUDES(Account__r.Service_Types__c ,&quot;FreshAire&quot;),True,False)</formula>
    <inlineHelpText>Associated Account includes FreshAire as a Service Type.</inlineHelpText>
    <label>Service Type: FreshAire</label>
    <type>Checkbox</type>
</CustomField>