force-app/main/default/objects/Survey__c/fields/Was_everything_installed__c.field-meta.xml
<CustomField>
    <fullName>Was_everything_installed__c</fullName>
    <label>Was everything installed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>