force-app/main/default/objects/Survey__c/fields/Was_everything_installed_as_expected__c.field-meta.xml
<CustomField>
    <fullName>Was_everything_installed_as_expected__c</fullName>
    <inlineHelpText>Survey Question: Was everything installed as expected? 1-100.</inlineHelpText>
    <label>Was everything installed as expected?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>