force-app/main/default/objects/Survey__c/fields/Why_did_you_give_us_that_score__c.field-meta.xml
<CustomField>
    <fullName>Why_did_you_give_us_that_score__c</fullName>
    <inlineHelpText>Survey Question: Why did you give us that score?</inlineHelpText>
    <label>Why did you give us that score?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>