force-app/main/default/objects/Survey__c/recordTypes/Net_Promoter_Score_Survey.recordType-meta.xml
<RecordType>
    <fullName>Net_Promoter_Score_Survey</fullName>
    <active>true</active>
    <description>Net Promoter Score survey questionnaire.</description>
    <label>Net Promoter Score Survey</label>
</RecordType>