force-app/main/default/objects/Survey__c/recordTypes/Post_Installation_Survey.recordType-meta.xml
<RecordType>
    <fullName>Post_Installation_Survey</fullName>
    <active>true</active>
    <label>Post Installation Survey</label>
</RecordType>