force-app/main/default/objects/Survey__c/listViews/All_Net_Promoter_Score_Surveys.listView-meta.xml
<ListView>
    <fullName>All_Net_Promoter_Score_Surveys</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.Net_Promoter_Score_Survey</value>
    </filters>
    <label>All Net Promoter Score Surveys</label>
</ListView>