force-app/main/default/objects/Survey__c/listViews/All_Post_Installation_Surveys.listView-meta.xml
<ListView>
    <fullName>All_Post_Installation_Surveys</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.Post_Installation_Survey</value>
    </filters>
    <label>All Post Installation Surveys</label>
</ListView>