force-app/main/default/objects/Survey__c/listViews/All_Surveys.listView-meta.xml
<ListView>
    <fullName>All_Surveys</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Surveys</label>
</ListView>